--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "expo": "~45.0.0",
     "expo-contacts": "~10.2.0",
     "expo-random": "~12.2.0",
