--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-native-async-storage/async-storage": "^1.17.7",
     "expo": "~45.0.0",
     "expo-contacts": "~10.2.0",
+    "expo-file-system": "~14.0.0",
     "expo-random": "~12.2.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-fs": "^2.20.0",
     "react-native-paper": "^4.12.4",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7"
