--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.7",
     "expo": "~45.0.0",
     "expo-contacts": "~10.2.0",
+    "expo-document-picker": "~10.2.1",
     "expo-file-system": "~14.0.0",
     "expo-random": "~12.2.0",
     "expo-status-bar": "~1.3.0",
