--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "expo-file-system": "~14.0.0",
     "expo-random": "~12.2.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-fs": "^2.20.0",
     "react-native-paper": "^4.12.4",
+    "react-native-snackbar": "^2.4.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "0.17.7"
   },
